# SyncGeo

./: .gitignore  CMakeLists.txt  README.md  README_PHASE12.md  README_PHASE3.md  README_PHASE4.md  README_PHASE5.md  README_PHASE6.md  README_PHASE7_TOUCH.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-touch-epaper154
.ccg/tasks/archive/2026-06/commit-push-ui-visual-unification/: task.json
.ccg/tasks/archive/2026-06/continue-ui-visual-unification/: requirements.md  review.md  task.json
.ccg/tasks/archive/2026-06/p1-power-optimization/: review.md  task.json
.ccg/tasks/archive/2026-06/p2-power-optimization-hooks/: claude-analysis.txt  claude-review.txt  gemini-analysis.txt  gemini-review.txt  review.md  task.json
.ccg/tasks/disable-unused-peripherals-power/: requirements.md  review.md  task.json
.ccg/tasks/fix-camera-list-reconnect/: review.md  task.json
.ccg/tasks/fix-idle-remote-and-reconnect-scan/: review.md  task.json
.ccg/tasks/generate-readme/: review.md  task.json
include/: FurbleControl.h  FurbleGPS.h  FurblePlatform.h  FurbleSettings.h  FurbleUI.h  SyncGeoSleepLogo.h  WaveshareEPaper154.h
lib/furble/: Camera.cpp  Camera.h  CameraList.cpp  CameraList.h  Ricoh.cpp  Scan.cpp  Scan.h
src/: CMakeLists.txt  FurbleControl.cpp  FurbleGPS.cpp  FurblePlatform.cpp  FurbleSettings.cpp  FurbleUI.cpp  FurbleUIFontZh14.c  WaveshareEPaper154.cpp  main.cpp
tools/: generate_ui_font.js
